<resources>
    <string name="app_name">A_Team</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="name_str">Логин</string>
    <string name="password_str">Пароль</string>
    <string name="register_str">Войти</string>
    <string name="Authorization">авторизация</string>
    <string name="successSign">You are register. Congratulations!!!</string>
    <string name="unsuccessSign">Registration rejected</string>
    <string name="setTitle">Success</string>
    <string name="setTitle2">Unsuccess</string>
    <string name="cancel">OK</string>
    <string name="accept">Sign in</string>
    <string name="FIO">ФИО</string>
    <string name="year_of_birth">Год рождения</string>
    <string name="city">Город</string>
    <string name="area">Район</string>
    <string name="rank">Должность</string>
    <string name="Organization">Учреждение</string>
    <string name="Org2">Организация</string>
    <string name="home">Дом</string>
    <string name="KV">Квартира</string>
    <string name="Add">Добавить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>