<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Authorization">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutFIO"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/FIO"
        app:layout_constraintTop_toTopOf="parent"
      >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextFIO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutYear_of_birth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/LayoutFIO"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year_of_birth"
            app:layout_constraintTop_toTopOf="parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutCity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/LayoutYear_of_birth"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            app:layout_constraintTop_toTopOf="parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutArea"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/LayoutCity"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area"
            app:layout_constraintTop_toTopOf="parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutHome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/LayoutArea"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextRank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rank"
            app:layout_constraintTop_toTopOf="parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutOrganization"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/LayoutHome"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextOrganization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Organization"
            app:layout_constraintTop_toTopOf="parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutOrganization2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/LayoutOrganization"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextOrganization2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Org2"
            app:layout_constraintTop_toTopOf="parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ButtonAdd"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Add"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>